--- a/packages/venia-concept/src/components/SearchBar/suggestedProduct.css
+++ b/packages/venia-concept/src/components/SearchBar/suggestedProduct.css
@@ -1,25 +1,22 @@
 .root {
-    align-content: start;
     align-items: center;
     display: grid;
-    grid-gap: 0.375rem 1rem;
-    grid-template-areas: 'image name price';
+    gap: 1rem;
+    grid-auto-flow: column;
     grid-template-columns: 60px 1fr;
-    grid-template-rows: min-content;
-    padding-bottom: 1rem;
 }
 
-.root:last-child {
-    padding-bottom: 0;
+.image {
+    align-items: center;
+    border: 1px solid rgb(var(--venia-border));
+    border-radius: 50%;
+    display: inline-flex;
+    height: 60px;
+    justify-content: center;
+    overflow: hidden;
+    width: 60px;
 }
 
-.productImage {
-    display: block;
-    height: auto;
-    width: 100%;
-}
-
-.productName {
-    padding-right: 50%;
+.name {
     word-break: break-word;
 }
